tests/pos/todo/simple/51-bitvector-00.ts

var a = 0x00000001;

var b = 0x00000002;

var c = 0x00000003;

assert((a|b) === c);

